Added AspNetCore identity

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     ports:
       - "5000:5000"
       - "5001:5001"
+    depends_on:
+      - babysitting.database
     
   babysitting.database:
     image: postgres:latest 
