--- a/BabySitting.Api/appsettings.json
+++ b/BabySitting.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "EmailSettings": {
+    "MailServer": "smtp.gmail.com",
+    "MailPort": 587,
+    "SenderName": "BabySitting app",
+    "FromEmail": "lukapavlovic032@gmail.com",
+    "Password": "wvjf kila kjnc mzhf"
+  },
   "ConnectionStrings": {
     "Database": "Host=babysitting.database;Port=5432;Database=babysitting;Username=postgres;Password=postgres;Include Error Detail=true",
     "Cache": "babysitting.cache:6379"
