--- a/BabySitting.Api/appsettings.json
+++ b/BabySitting.Api/appsettings.json
@@ -10,7 +10,7 @@
     "Database": "Host=babysitting.database;Port=5432;Database=babysitting;Username=postgres;Password=postgres;Include Error Detail=true",
     "Cache": "babysitting.cache:6379"
   },
-  "AppBaseUrl": "https://yourappdomain.com",
+  "AppBaseUrl": "https://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
