--- a/BabySitting.Api/appsettings.json
+++ b/BabySitting.Api/appsettings.json
@@ -34,5 +34,11 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "",
+    "Issuer": "BabySitting-backend",
+    "Audience": "account",
+    "ExpirationMinutes": 60
+  }
 }
